kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-app
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: url-shortener-app
  template:
    metadata:
      labels:
        app: url-shortener-app
    spec:
      containers:
        - name: url-shortener-app
          image: chrissherman/url-shortener:latest 
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-app
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: url-shortener-app
  ports:
    - port: 8080
      targetPort: 8080
