kubernetes/front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skny-link-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skny-link-frontend
  template:
    metadata:
      labels:
        app: skny-link-frontend
    spec:
      containers:
      - name: nginx
        image: chrissherman/skny-link-frontend:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: skny-link-frontend
  namespace: default
spec:
  selector:
    app: skny-link-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
